// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeartbeatLoader should render correctly 1`] = `
.c0 {
  position: relative;
  width: 40px;
  height: 40px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  opacity: 0.7;
  background-color: #10ADE4;
  -webkit-animation: eeCuoj 2s infinite ease-in-out;
  animation: eeCuoj 2s infinite ease-in-out;
}

.c2 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

<HeartbeatLoader
  size="40px"
>
  <styled.div
    size="40px"
  >
    <div
      className="c0"
      size="40px"
    >
      <styled.div>
        <div
          className="c1"
        />
      </styled.div>
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          />
        </styled.div>
      </Styled(styled.div)>
    </div>
  </styled.div>
</HeartbeatLoader>
`;

exports[`HeartbeatLoader should render correctly with size 1`] = `
.c0 {
  position: relative;
  width: 100px;
  height: 100px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  opacity: 0.7;
  background-color: #10ADE4;
  -webkit-animation: eeCuoj 2s infinite ease-in-out;
  animation: eeCuoj 2s infinite ease-in-out;
}

.c2 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

<HeartbeatLoader
  size="100px"
>
  <styled.div
    size="100px"
  >
    <div
      className="c0"
      size="100px"
    >
      <styled.div>
        <div
          className="c1"
        />
      </styled.div>
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          />
        </styled.div>
      </Styled(styled.div)>
    </div>
  </styled.div>
</HeartbeatLoader>
`;
